run java nqopt tests against both jdk1.5 and jdk1.2